# pyfinny

./: .gitignore  DCF_notes.md  README.md  Session.vim  fin_analysis.py  fin_compare.py  fin_start.py  fin_utils.py  financial_data.db  planning.md  pyfinny.py  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  setup.sh  start.sh  tickers.csv
app/: application.py  utils.py
comparables/: README.md  compare.xlsx  stats_compare.csv  stats_compare.txt  wacc_compare.csv  wacc_compare.txt
data/: balance-sheet-statement.json  cash-flow-statement.json  income-statement.json  quote.json
financials/: README.md
financials/AAPL/: AAPL_fin.csv  AAPL_fin.txt  AAPL_fin.xlsx  AAPL_financials_binary  AAPL_stats.csv  AAPL_stats.txt  AAPL_stats_binary  AAPL_wacc.csv  AAPL_wacc.txt
financials/GOOG/: GOOG_fin.csv  GOOG_fin.txt  GOOG_fin.xlsx  GOOG_financials_binary  GOOG_stats.csv  GOOG_stats.txt  GOOG_stats_binary  GOOG_wacc.csv  GOOG_wacc.txt
financials/MSFT/: MSFT_fin.csv  MSFT_fin.txt  MSFT_fin.xlsx  MSFT_financials_binary  MSFT_stats.csv  MSFT_stats.txt  MSFT_stats_binary  MSFT_wacc.csv  MSFT_wacc.txt
financials/TSLA/: TSLA_fin.csv  TSLA_fin.txt  TSLA_fin.xlsx  TSLA_financials_binary  TSLA_stats.csv  TSLA_stats.txt  TSLA_stats_binary  TSLA_wacc.csv  TSLA_wacc.txt
resources/: Comparable-Company-Analysis-Template.xlsx  TAMID-Comparable-Analysis-Template.xlsx  TAMID-DCF-Template.xlsx  comparables_analysis.xlsx  compare.xlsx  dcf.xlsx
src/: analyze.py  compare.py  error_log.txt  main.py  new_start.py  temp.py  utils.py
src/scripts/: analysis.py  start.py  utils.py
src/tickers/: sample_tickers.csv
tickers/: companies.txt  compare.txt  load.txt
