[metadata]
name = Lawrence Lim
version = 0.0.1
author = Lawrence Lim
author_email = ll4715@nyu.edu
url = https://github.com/larry-lime/pyfinny
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
  click==8.1.3
  openpyxl==3.0.10
  tqdm==4.64.1
  requests==2.28.2
  python-dotenv==0.21.1

[options.entry_points]
# console_scripts = 
#     my-example-utility = example.example_module:main

[options.extras_require]
# notebook = jupyter>=1.0.0, matplotlib
dev = 
  black==22.12.0

[options.package_data]
example = data/financial_data.db, tickers/*.txt, resources/*.xlsx
* = README.md
