[metadata]
name = pyfinny
version = 0.0.5
author = Lawrence Lim
author_email = ll4715@nyu.edu
url = /
description = Financial Statement Analyzer CLI
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
  click==8.1.3
  openpyxl==3.0.10
  python-dotenv==0.21.1
  requests==2.28.2
  tqdm==4.64.1

[options.entry_points]
console_scripts = 
    pyfin = pyfinny:cli

[options.extras_require]
dev = 
    black==22.12.0

[options.package_data]
example = resources/*, tickers/*, app/* # FIXME: Fix this
* = README.md
